# CoreForge-High-Performance-C-Kernel-Optimizations

./: README.md
CoreForge/: CMakeLists.txt
CoreForge/bonus/: CMakeLists.txt
CoreForge/bonus/include/: bench.h  bitwise.h  filter_gradient.h  grff.h  image_proc.h  sparse_spmm.h  trace_replay.h
CoreForge/bonus/src/kernel/: bitwise_bonus.cpp  blackscholes_bonus.cpp  filter_gradient_bonus.cpp  graph_bonus.cpp  grff_bonus.cpp  image_proc_bonus.cpp  matmul_bonus.cpp  relu_bonus.cpp  sparse_spmm_bonus.cpp  trace_replay_bonus.cpp
CoreForge/bonus/src/main/: run_all_bonus.cpp
CoreForge/include/: bench.h  blackscholes.h  filter_gradient.h  graph.h  matmul.h  relu.h  sparse_spmm.h  trace_replay.h
CoreForge/src/kernel/: bitwise.cpp  blackscholes.cpp  filter_gradient.cpp  graph.cpp  grff.cpp  image_proc.cpp  matmul.cpp  relu.cpp  sparse_spmm.cpp  trace_replay.cpp
CoreForge/src/main/: run_all.cpp  single_bench.cpp
